--- a/app/home/components/mainSection/mainSection.scss
+++ b/app/home/components/mainSection/mainSection.scss
@@ -119,7 +119,7 @@ $container-width: 1080px;
     }
   }
   @media (max-width: 768px) {
-    margin-bottom: 150px;
+    margin-bottom: 160px;
     .emailSubmitInput {
       margin-bottom: 8px;
       width: 271px;
