--- a/app/home/components/productSection/productSection.scss
+++ b/app/home/components/productSection/productSection.scss
@@ -14,8 +14,8 @@ $container-width: 1080px;
       float: right;
     }
     @media (max-width: 768px) {
-      position: absolute;
       margin-top: 320px;
+      width: 100%;
       img {
         width: 420px;
         height: 242px;
@@ -62,11 +62,14 @@ $container-width: 1080px;
   }
   @media (max-width: 768px) {
     padding-top: 20px;
+    overflow: hidden;
+    position: relative;
     .innerContainer {
       padding-left: 15px;
       padding-right: 15px;
       .contentsWrapper {
         margin-top: 30px;
+        margin-left: 0px;
         .oval_1 {
           top: 0px;
           left: 160px;
@@ -104,6 +107,7 @@ $container-width: 1080px;
     font-size: 18px;
     line-height: 1;
     text-align: left;
+    width: 100%;
   }
 }
 
