--- a/app/home/components/workSection/workSection.scss
+++ b/app/home/components/workSection/workSection.scss
@@ -9,6 +9,7 @@ $container-width: 1080px;
     max-width: $container-width;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
   }
   @media (max-width: 768px) {
     padding-top: 50px;
@@ -30,10 +31,15 @@ $container-width: 1080px;
   @media (max-width: 768px) {
     font-size: 20px;
     text-align: left;
+    width: 100%;
   }
 }
 .titleWrapper {
   display: flex;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .title {
@@ -45,7 +51,6 @@ $container-width: 1080px;
   font-weight: 600;
   margin-bottom: 64px;
   width: 530px;
-  white-space: pre;
 
   strong {
     font-weight: 700;
@@ -55,12 +60,13 @@ $container-width: 1080px;
     font-size: 28px;
     line-height: 1.3;
     text-align: left;
+    margin-bottom: 50px;
+    max-width: 100%;
   }
 }
 
 .whitepaperWrapper {
   display: flex;
-  flex-direction: column;
   width: 200px;
   margin-left: 240px;
   position: relative;
@@ -92,14 +98,17 @@ $container-width: 1080px;
     }
 
     @media (max-width: 768px) {
-      width: 100%;
-      font-size: 14px;
+      width: 200px;
+      font-size: 18px;
     }
 
     transform: translateY(10%);
     opacity: 0;
     transition: transform 0.8s ease, opacity 0.8s ease;
     transition-delay: 0.2s, 0.2s;
+  }
+  @media (max-width: 768px) {
+    display: none;
   }
 }
 
